--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,8 +39,13 @@
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.codeActionsOnSave": {
-      "source.fixAll.stylelint": true
+      "source.fixAll.stylelint": "explicit"
     }
   },
-  "typescript.tsdk": "./airbyte-webapp/node_modules/typescript/lib"
+  "typescript.tsdk": "./airbyte-webapp/node_modules/typescript/lib",
+  "[javascript][typescript][typescriptreact]": {
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": "never"
+    }
+  }
 }
